objects/ssot__PatientMedicationDosage__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdditionalInstructionText__c</fullName>
        <label>Additional Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommentText__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DosageDefinitionText__c</fullName>
        <label>Dosage Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DosageDefinitionType__c</fullName>
        <label>Dosage Definition Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DosageDenominatorNumber__c</fullName>
        <label>Dosage Denominator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DosageDenominatorUnitId__c</fullName>
        <label>Dosage Denominator Unit of Measure</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DosageNumeratorNumber__c</fullName>
        <label>Dosage Numerator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DosageNumeratorUnitId__c</fullName>
        <label>DosageNumeratorUnit</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DosageQuantityDenominatorNumber__c</fullName>
        <label>Dosage Quantity Denominator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DosageQuantityNumeratorNumber__c</fullName>
        <label>Dosage Quantity Numerator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DosageQuantityType__c</fullName>
        <label>Dosage Quantity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DosageQuantityUOMId__c</fullName>
        <label>Dosage Quantity Unit of Measure</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DosageQuantity__c</fullName>
        <label>Dosage Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DosageRateDenominatorNumber__c</fullName>
        <label>Dosage Rate Denominator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DosageRateNumeratorNumber__c</fullName>
        <label>Dosage Rate Numerator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DosageRateType__c</fullName>
        <label>Dosage Rate Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DosageRateUnitId__c</fullName>
        <label>Dosage Rate Unit of Measure</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DosageTimingId__c</fullName>
        <label>Dosage Timing</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DosageUnitId__c</fullName>
        <label>Dosage Unit of Measure</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DosePrerequisiteId__c</fullName>
        <label>Dose Prerequisite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DoseQuantityUnitOfMeasure__c</fullName>
        <label>Dose Quantity Unit Of Measure</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DoseQuantity__c</fullName>
        <label>Dose Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Patient Medication Dosage Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAsNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is As Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationAdministrationMethodCodeId__c</fullName>
        <label>Medication Administration Method Code</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentReferenceRecordId__c</fullName>
        <label>Parent Reference Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentReferenceRecordObject__c</fullName>
        <label>Parent Reference Record Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientInstructionText__c</fullName>
        <label>Patient Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Route__c</fullName>
        <label>Route</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Site__c</fullName>
        <label>Site</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721964522_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationDosage_Site_map_Cod_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>PatientMedicationDosage_Site_map_Cod_rel</relationshipLabel>
        <relationshipName>rel_1716721964522_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721969155_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationDosage_MedicationAd_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>PatientMedicationDosage_MedicationAd_rel</relationshipLabel>
        <relationshipName>rel_1716721969155_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721973174_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationDosage_Route_map_Co_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>PatientMedicationDosage_Route_map_Co_rel</relationshipLabel>
        <relationshipName>rel_1716721973174_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>